app/assets/stylesheets/framework_and_overrides.css.scss
@import "bootstrap";

$teal: #aadddd;
$darkteal: #55B4B0;

%form-fields {
  width: 50%;
  border-radius: 3px;
  border: 1px solid #C0C0C0;
  padding: 8px 6px 6px 6px;
  line-height: 17px;
  margin: 0 0 16px 0;
  font-family: AvenirLT-Heavy,Helvetica Neue,Helvetica,Arial,sans-serif;
}

%teal-button {
  background-color: $darkteal;
  padding: 10px 60px;
  text-decoration: none;
  @extend %transition;
  border-radius: 4px;
  font-size: 16px;
  color: white;
  position: relative;
  float: right;
  margin-right: 60px;
  margin-top: 10px;
  border-bottom: 3px solid darken($darkteal, 10%);

  &:hover {
    background-color: darken($darkteal, 5%);
  }
}

%transition {
  -webkit-transition: all 0.2s ease;
  -moz-transition: all 0.2s ease;
  -ms-transition: all 0.2s ease;
  -o-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

%homepageheaders {
  text-align: center;
  background-color: #666688;
  padding-top: 10px;
  padding-bottom: 10px;
  border-radius: 3px;
  opacity: .8;
}

body, html {
  -webkit-font-smoothing: antialiased;
  background-color: #f8f9fb;
}

a {
text-decoration: none;
background-color: transparent;

  &:hover {
    background-color: transparent;
  }
}

.container {
  // min-height:100%;
}

.navbar-fixed-top {
  position: absolute;
}
.navbar-inverse {
  border-bottom: none;

  img {
    height: 40px;
    width: 40px;
    display: inline-block;
    float: left;
    margin-top: 5px;
    margin-left: 40px;
  }

  .navbar-brand {
    font-size: inherit;
    color: gray;
    margin-right: 15px;
    font-weight: bold;
    font-size: 12px;

    &:hover {
      color: darken($teal, 20%);
      background-color: #f9f9f9;
    }
  }

  .navbar-nav {
    float: right;
    font-weight: bold;
    font-size: 12px;

    .trial-time-left {
      margin-right: 15px;

      a {
        @extend %transition;
        color: #ff6666;
        font-weight: bold;
        border: 1px solid #ff6666;
        padding-top: 5px;
        padding-bottom: 5px;
        margin-top: 10px;
        border-radius:28px;
      
        &:hover {
          background-color: darken(#ff6666, 10%);
        }
      }
    }

    .login-logout-link {
      color: gray;
      @extend %transition;
      
      .login-logout-link:hover {
        color: darken($teal, 20%);
        background-color: #f9f9f9;
      }
    }

    li.signup-link {
      margin-right: 15px;

      a {
        @extend %transition;
        color: white;
        font-weight: bold;
        background-color: #ff6666;
        padding-top: 5px;
        padding-bottom: 5px;
        margin-top: 10px;
        border-radius:5px;
      
        &:hover {
          background-color: darken(#ff6666, 10%);
        }
      }
    }
  }
}

.alert {
  margin-bottom: 0px;
  margin-top: 50px;
  text-align: center;
}

span {
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

img {
  @extend .img-responsive;
  margin: 0 auto;
  }

ul {
  list-style: none;
  padding:0;
}

label {
  display: block;
}
.navbar {
  margin-bottom: 0px;
  background-color: white;
}

.column {
  @extend .col-md-6;
  @extend .text-center;
  }
.form {
  @extend .col-md-6;
  }
.form-centered {
  @extend .col-md-6;
  @extend .text-center;
  }
.submit {
  @extend .btn;
  @extend .btn-primary;
  @extend .btn-lg;
  }

.signup-page, .edit-user-page, .signin-page {
  background-color: #f8f9fb;
}

.authform {
  padding-top: 30px;
  max-width: 320px;
  margin: 0 auto;
  margin-top: 40px;
}
.authform form {
  @extend .well;
  @extend .well-lg;
  padding-bottom: 50px;
  background-color: $darkteal;
  border-radius: 0px;
  border: none;
  color: white;

  a {
    text-decoration: none;
    background-color: none;
    color: white;

    &:hover {
      background-color: transparent;
    }
  }
  h3 {
    margin-top: 0px;
    margin-bottom: 30px;
    text-align: center;
  }
}
.authform .right {
  float: right !important;
}
.authform .button {
  @extend .btn;
  width: 272px;
  border-radius: 0px;
  border: none;
  background-color: #666688;
  @extend %transition;
  &:hover {
    background-color: lighten(#666688, 10%);
    color: white;
  }
}
.authform fieldset {
  @extend .well;
}

// #error_explanation {
//   @extend .alert;
//   @extend .alert-danger;
// }
// #error_explanation h2 {
//   font-size: 16px;
// }
.button-xs {
  @extend .btn;
  @extend .btn-primary;
  @extend .btn-xs;
}

.new-job-form {
  background-color: #f8f9fb;
}
/* ... */

